# ProyectoPrograII

./: ArchivoInvalido.cpp  ArchivoInvalido.h  CMakeLists.txt  Computador.cpp  Computador.h  Equipo.cpp  Equipo.h  ErrorBase.cpp  ErrorBase.h  FormatoInvalido.cpp  FormatoInvalido.h  GenerarReporte.cpp  GenerarReporte.h  Incidencia.cpp  Incidencia.h  Laboratio.cpp  Laboratio.h  Laboratorio.cpp  Laboratorio.h  LectorArchivo.cpp  LectorArchivo.h  OperacionInconsistente.cpp  OperacionInconsistente.h  Ordenamiento.cpp  Ordenamiento.h  PlanificadorDiario.cpp  PlanificadorDiario.h  Servidor.cpp  Servidor.h  Simulacion.cpp  Simulacion.h  equipos_100.txt  incidencias_300.txt  main.cpp
